[package]
edition = "2021"
name = "damn-moody-wallpaper-autochanger"
version = "0.2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[dependencies]
chrono = "*"
ctrlc = "*"
image = "*"
rand = "*"
single-instance = "*"
walkdir = "*"
xdg = "*"

